# Bean-Engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: input.h  logo_bmp.h  platform.h  render.h
engine/include/engine/: assets.h  engine.h  input.h  platform.h  renderer.h  shaders.h  texture.h
engine/include/engine/3ds/: assets.h  render.h
engine/include/engine/gfx/: renderer.h  texture.h  window.h
engine/src/: assets.cpp  engine.cpp  input.cpp  render.cpp  renderer.cpp  texture.cpp
engine/src/3ds/: input.cpp  render.cpp
engine/src/gfx/: renderer.cpp  texture.cpp  window.cpp
include/engine/: assets.h  engine.h  input.h  texture.h
include/glad/: glad.h
src/: engine.cpp
src/engine/3ds/: assets.cpp
src/glad/: glad.c
